-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15
-
-
b84852670da604d32fe7cf222f0a82c28fd29c53 (qt/qtbase/dev) fcbeebc5828228078c38329940fabb80f22e3909 (qt/qtbase/5.15)
Hello,
the following code which works fine up to roughly 5.15.1, triggers an infinite loop somewhere in 5.15 HEAD
#include <QtCore> #include <QtWidgets> int main(int argc, char *argv[]) { QApplication a(argc, argv); QFileSystemModel model; model.setNameFilters(QStringList{"*.foo"}); model.setNameFilterDisables(false); model.setFilter(QDir::AllDirs | QDir::Files | QDir::NoDotAndDotDot); QSortFilterProxyModel pm; pm.setRecursiveFilteringEnabled(true); pm.setSourceModel(&model); pm.setFilterKeyColumn(0); QTreeView w; w.setModel(&pm); w.show(); return a.exec(); }
- is duplicated by
-
QTBUG-87588 [REG 5.15.1 -> 5.15] QFileSystemModel with QDir::NoDot filter hangs
-
- Closed
-
| For Gerrit Dashboard: QTBUG-87273 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 317124,6 | Fix infinite loop triggered when displaying model with QTreeView | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 317165,5 | Return false from canFetchMore for uninitialized QFileSystem models | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 317290,4 | Return false from canFetchMore for uninitialized QFileSystem models | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |
| 317291,2 | Fix infinite loop triggered when displaying model with QTreeView | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |