Fix infinite loop triggered when displaying model with QTreeView

For some models like the QFileSystemModel canFetchMore() returns true even though fetchMore() doesn't return anything if setRootPath is false. To prevent an infinite loop, add a check to make sure the model's rowCount was updated during the loop.

Fixes: QTBUG-87273
Change-Id: I16275fc2765fd77badc1c5d265e8ba5cd250163a
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit b84852670da604d32fe7cf222f0a82c28fd29c53)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>